tools/tests/errors/for_non_iterable.ki
for x in 5:
    discard x
